完成了注册，登录，的逻辑代码

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,7 +29,7 @@
         android:hint="确认密码" />
 
     <Button
-        android:id="@+id/doLogin"
+        android:id="@+id/doRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="注册" />
