--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -36,7 +36,7 @@
 
 
     <Button
-        android:id="@+id/doLogin"
+        android:id="@+id/doForget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="下一步" />
