--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,41 +10,41 @@
 
     <EditText
         android:id="@+id/userName"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
         android:hint="账号" />
-
     <EditText
         android:id="@+id/userPwd"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
         android:hint="密码" />
 
     <Button
-        android:id="@+id/doLogin"
-        android:layout_width="match_parent"
+        android:id="@+id/btnLogin"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
         android:text="登录" />
 
     <RelativeLayout
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="8dp">
 
         <TextView
-            android:id="@+id/zhuce"
-            android:layout_width="wrap_content"
+            android:id="@+id/textRegister"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
             android:text="注册" />
 
         <TextView
-            android:id="@+id/forget"
-            android:layout_width="wrap_content"
+            android:id="@+id/textForget"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
             android:text="忘记密码" />
     </RelativeLayout>
 </LinearLayout>
