--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -215,5 +215,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/gray"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal">
+
+
+    </LinearLayout>
 </LinearLayout>
