--- a/app/src/main/res/layout/fragment_sort.xml
+++ b/app/src/main/res/layout/fragment_sort.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <q.rorbin.verticaltablayout.VerticalTabLayout
+        android:id="@+id/btn_kinds"
+        android:layout_width="70dp"
+        android:layout_height="match_parent"
+        app:indicator_color="#ffffff"
+        app:indicator_gravity="fill"
+        app:indicator_width="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/vp_kinds"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tab_height="30dp" />
 
-</LinearLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp_kinds"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btn_kinds"
+        app:layout_constraintRight_toRightOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
